terraform/envs/dev/waf.tf
resource "aws_wafv2_web_acl" "alb" {
  name        = "alb-web-acl"
  description = "WAF for ALB (regional)"
  scope       = "REGIONAL"

  default_action {
    allow {}
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "albWebAcl"
    sampled_requests_enabled   = true
  }

  rule {
    name     = "AWSManagedCommonRuleSet"
    priority = 1

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "CommonRuleSet"
      sampled_requests_enabled   = true
    }
  }
}

resource "aws_wafv2_web_acl_association" "alb" {
resource_arn = aws_lb.test.arn
  web_acl_arn  = aws_wafv2_web_acl.alb.arn
}
